--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.springframework.cloud.fn</groupId>
-	<artifactId>java-functions-parent</artifactId>
+    <groupId>org.springframework.cloud.fn</groupId>
+    <artifactId>java-functions-parent</artifactId>
     <version>4.0.1-SNAPSHOT</version>
-	<name>java-functions-parent</name>
-	<description>Java Functions Parent</description>
-	<packaging>pom</packaging>
+    <name>java-functions-parent</name>
+    <description>Java Functions Parent</description>
+    <packaging>pom</packaging>
 
-	<modules>
-		<module>spring-functions-parent</module>
+    <modules>
+        <module>spring-functions-parent</module>
         <module>common</module>
-		<module>consumer</module>
-		<module>function</module>
-		<module>supplier</module>
-		<module>function-dependencies</module>
-	</modules>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>3.0.0</version>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+        <module>consumer</module>
+        <module>function</module>
+        <module>supplier</module>
+        <module>function-dependencies</module>
+    </modules>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.18.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
