--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -17,13 +17,13 @@
 
     <properties>
         <stream-apps-core.version>5.0.1-SNAPSHOT</stream-apps-core.version>
-        <java-functions.version>5.0.1-SNAPSHOT</java-functions.version>
-        <prometheus-rsocket.version>2.0.0-M1</prometheus-rsocket.version>
+        <java-functions.version>5.0.1</java-functions.version>
+        <prometheus-rsocket.version>2.0.0-M2</prometheus-rsocket.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.0.14</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.14</spring-cloud-dataflow-apps-docs-plugin.version>
         <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.14</spring-cloud-dataflow-apps-metadata-plugin.version>
         <java-cfenv-boot.version>3.2.0</java-cfenv-boot.version>
-        <spring-cloud-services.version>4.1.5</spring-cloud-services.version>
+        <spring-cloud-services.version>4.1.6</spring-cloud-services.version>
     </properties>
 
     <modules>
