--- a/.github/workflows/ci-it.yml
+++ b/.github/workflows/ci-it.yml
@@ -71,6 +71,7 @@ jobs:
           name: Unit Tests
           path: '**/surefire-reports/*.xml'
           reporter: java-junit
+          fail-on-empty: 'false'
       - name: Integrtation Test Report
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
@@ -78,6 +79,7 @@ jobs:
           name: Integration Tests
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
+          fail-on-empty: 'false'
       - name: 'Upload: Error logs'
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
