--- a/spring-cloud-dataflow-apps-plugin/pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/pom.xml
@@ -3,41 +3,44 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.cloud</groupId>
 	<artifactId>spring-cloud-dataflow-apps-plugin-parent</artifactId>
-	<version>1.0.15-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<name>spring-cloud-dataflow-apps-plugin-parent</name>
 	<description>Spring Cloud Dataflow Apps Plugin Parent</description>
 	<packaging>pom</packaging>
-
 	<properties>
 		<java.version>17</java.version>
-		<maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
-		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
+		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
+		<maven-plugin-plugin.version>3.15.1</maven-plugin-plugin.version>
+		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+		<maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
 		<disable.checks>false</disable.checks>
 		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
 		<maven-checkstyle-plugin.failOnViolation>true</maven-checkstyle-plugin.failOnViolation>
 		<maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
-		<puppycrawl-tools-checkstyle.version>8.29</puppycrawl-tools-checkstyle.version>
-		<checkstyle.location>https://raw.githubusercontent.com/spring-cloud/spring-cloud-dataflow-apps-plugin/master/etc/checkstyle</checkstyle.location>
-		<checkstyle.suppressions.file>
-			${checkstyle.location}/checkstyle-suppressions.xml
-		</checkstyle.suppressions.file>
-		<checkstyle.nohttp.file>
-			${checkstyle.location}/nohttp-checkstyle.xml
-		</checkstyle.nohttp.file>
-		<checkstyle.additional.suppressions.file>
-			${checkstyle.location}/checkstyle-suppressions.xml
+		<puppycrawl-tools-checkstyle.version>10.3.4</puppycrawl-tools-checkstyle.version>
+		<!--suppress UnresolvedMavenProperty -->
+		<checkstyle.location>${maven.multiModuleProjectDirectory}/etc/checkstyle</checkstyle.location>
+		<checkstyle.suppressions.file>${checkstyle.location}/checkstyle-suppressions.xml</checkstyle.suppressions.file>
+		<checkstyle.nohttp.file>${checkstyle.location}/nohttp-checkstyle.xml</checkstyle.nohttp.file>
+		<checkstyle.additional.suppressions.file>${checkstyle.location}/checkstyle-suppressions.xml
 		</checkstyle.additional.suppressions.file>
-		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
+		<nohttp-checkstyle.version>0.0.11</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
-		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
+		<spring-javaformat-checkstyle.version>0.0.43</spring-javaformat-checkstyle.version>
+		<!-- Library dependencies version -->
+		<maven-api.version>3.9.9</maven-api.version>
+		<maven-plugin-annotations.version>3.15.1</maven-plugin-annotations.version>
+		<commons.io.version>2.16.1</commons.io.version>
+		<commons-text.version>1.12.0</commons-text.version>
+		<spring-boot.version>3.3.6</spring-boot.version>
+		<spring.version>6.1.15</spring.version>
+		<spring-cloud.version>2023.0.4</spring-cloud.version>
 	</properties>
-
   	<modules>
 		<module>spring-cloud-dataflow-apps-generator-plugin</module>
 		<module>spring-cloud-dataflow-apps-metadata-plugin</module>
@@ -56,12 +59,11 @@
 			</roles>
 		</developer>
 	</developers>
-
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
-			<comments>Copyright 2014-2020 the original author or authors.
+			<comments>Copyright 2014-2024 the original author or authors.
 
 				Licensed under the Apache License, Version 2.0 (the "License");
 				you may not use this file except in compliance with the License.
@@ -83,11 +85,79 @@
 		<developerConnection>scm:git:ssh://git@github.com/spring-cloud/spring-cloud-dataflow-apps-plugin.git</developerConnection>
 		<url>https://github.com/spring-cloud/spring-cloud-dataflow-apps-plugin</url>
 	</scm>
+	<dependencyManagement>
+		<dependencies>
+			<!-- ================================================== -->
+			<!-- Override dependencies should go above this comment -->
+			<!-- ================================================== -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-core</artifactId>
+				<version>${maven-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven</groupId>
+				<artifactId>maven-plugin-api</artifactId>
+				<version>${maven-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.maven.plugin-tools</groupId>
+				<artifactId>maven-plugin-annotations</artifactId>
+				<version>${maven-plugin-annotations.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons.io.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-text</artifactId>
+				<version>${commons-text.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${maven-javadoc-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-plugin-plugin</artifactId>
+					<version>${maven-plugin-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>${maven-source-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<version>${maven-checkstyle-plugin.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>${maven-javadoc-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>javadoc</id>
@@ -98,13 +168,13 @@
 					</execution>
 				</executions>
 				<configuration>
-					<source>1.8</source>
 					<quiet>true</quiet>
+					<doclint>syntax</doclint>
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>${maven-source-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -118,10 +188,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
 					<threadCount>1</threadCount>
 					<forkCount>1</forkCount>
+					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 					<includes>
 						<include>**/*Tests.java</include>
 						<include>**/*Test.java</include>
@@ -134,7 +204,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${maven-checkstyle-plugin.version}</version>
 				<dependencies>
 					<dependency>
 						<groupId>com.puppycrawl.tools</groupId>
@@ -241,8 +310,6 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-
-
 	<profiles>
 		<profile>
 			<id>milestone</id>
