--- a/.github/workflows/apps-plugin-release.yml
+++ b/.github/workflows/apps-plugin-release.yml
@@ -14,20 +14,15 @@ jobs:
       run:
         working-directory: spring-cloud-dataflow-apps-plugin
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: temurin
-      - uses: jvalkeal/setup-maven@v1
-        with:
-          maven-version: 3.8.8
-          maven-mirror: 'https://dlcdn.apache.org/maven/maven-3/'
       - uses: jfrog/setup-jfrog-cli@v3
-        with:
-          version: 1.46.4
         env:
-          JF_ARTIFACTORY_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
+          JF_URL: 'https://repo.spring.io'
+          JF_ENV_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
       - uses: actions/cache@v2
         with:
           path: ~/.m2/repository
@@ -36,9 +31,9 @@ jobs:
             ${{ runner.os }}-m2-
       - name: Configure JFrog Cli
         run: |
-          jfrog rt mvnc \
-            --server-id-resolve=repo.spring.io \
-            --server-id-deploy=repo.spring.io \
+          jfrog mvnc --use-wrapper \
+            --server-id-resolve=${{ vars.JF_SERVER_ID }} \
+            --server-id-deploy=${{ vars.JF_SERVER_ID }} \
             --repo-resolve-releases=libs-release-staging \
             --repo-resolve-snapshots=libs-snapshot \
             --repo-deploy-releases=libs-staging-local \
@@ -60,7 +55,7 @@ jobs:
             -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}' \
             -B
           jfrog rt build-clean
-          jfrog rt mvn -gs settings.xml -Pstagingrelease,full,deploymentfiles -B install -DskipTests 
+          jfrog mvn -gs settings.xml -Pstagingrelease,full,deploymentfiles -B install clean -DskipTests 
           jfrog rt build-publish
           echo spring_cloud_dataflow_apps_plugin_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout) >> $GITHUB_ENV
       - name: Tag Release
