[Apps Plugin] Remove JIB plugin
Removes the JIB plugin from the apps generator plugin.

Signed-off-by: Corneil du Plessis <corneil.du-plessis@broadcom.com>

--- a/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-plugin/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -44,7 +44,7 @@
 							<application>
 								<bootVersion>${spring-boot.version}</bootVersion>
 								<metadata>
-									<mavenPluginVersion>3.3.0-M1</mavenPluginVersion>
+									<mavenPluginVersion>3.3.0</mavenPluginVersion>
 								</metadata>
 								<containerImage>
 									<orgName>globalOrgName</orgName>
