Add gRPC CVEs to trivyignore
Adds 2 CVEs due to `debezium-supplier` transitive dependencies.

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -56,6 +56,7 @@ jobs:
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
           exit-code: 1
+          trivyignores: .trivyignore
       - name: 'Scanned'
         shell: bash
         run: echo "::info ::Scanned"
