--- a/.trivyignore
+++ b/.trivyignore
@@ -1,2 +1,17 @@
+################################
+## From debezium-supplier
+################################
+CVE-2023-1428
+CVE-2023-32731
+
+################################
+# Snakeyaml 1.3.3
+# SCDF usage has been mitigated.
+################################
 CVE-2022-1471
+
+################################
+# Spring Web 5.3.x
+# SCDF not affected.
+################################
 CVE-2016-1000027
