--- a/.github/workflows/cental-sync-create.yml
+++ b/.github/workflows/cental-sync-create.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu22-8-32-OSS
     steps:
     - uses: actions/checkout@v3
     - uses: jfrog/setup-jfrog-cli@v3
