--- a/.trivyignore
+++ b/.trivyignore
@@ -3,6 +3,8 @@
 ################################
 CVE-2023-1428
 CVE-2023-32731
+CVE-2024-41909
+CVE-2024-7254
 
 ################################
 # Snakeyaml 1.3.3
