--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -17,13 +17,13 @@
 
     <properties>
         <stream-apps-core.version>5.1.1-SNAPSHOT</stream-apps-core.version>
-        <java-functions.version>5.1.0</java-functions.version>
+        <java-functions.version>5.1.1-SNAPSHOT</java-functions.version>
         <prometheus-rsocket.version>1.5.3</prometheus-rsocket.version>
         <spring-cloud-dataflow-apps-generator-plugin.version>1.1.1</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.1.1</spring-cloud-dataflow-apps-docs-plugin.version>
         <spring-cloud-dataflow-apps-metadata-plugin.version>1.1.1</spring-cloud-dataflow-apps-metadata-plugin.version>
         <java-cfenv-boot.version>3.2.0</java-cfenv-boot.version>
-        <spring-cloud-services.version>4.1.6</spring-cloud-services.version>
+        <spring-cloud-services.version>4.1.8</spring-cloud-services.version>
     </properties>
 
     <modules>
