Skip apps plugin during CI scan (take 2)
Signed-off-by: Chris Bono <chris.bono@broadcom.com>

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -57,7 +57,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: 1
           trivyignores: .trivyignore
-          skip-dirs: 'spring-cloud-dataflow-apps-plugin'
+          skip-dirs: 'spring-cloud-dataflow-apps-plugin/**'
       - name: 'Scanned'
         shell: bash
         run: echo "::info ::Scanned"
